# c1s-slingshot-sdk-py

./: .commitlintrc.js  .gitignore  .gitlint  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: checks.yml  ci.yml  conventional-commits.yml  release-please.yml  tags.yml  update-changelog.yml
demo/: install_cli.sh
docs/: CHANGELOG.md  api.md  changelog.md  conf.py  examples.md  index.md  index.rst  openapi-bundled.yaml  openapi.yaml  quickstart.md
docs/guide/: glossary.rst  start.rst
docs/reference/: api.rst  awsdatabricks.rst  azuredatabricks.rst
docs/reference/api/: projects.rst
scripts/: precheck.sh  setup.sh  validate_openapi.py
slingshot/: __init__.py  _databricks.py  awsdatabricks.py  azuredatabricks.py  config.py  models.py  projects.py
slingshot/api/: projects.py  workspace.py
slingshot/clients/: __init__.py  cache.py  databricks.py  slingshot.py
slingshot/utils/: json.py
src/slingshot/: __init__.py  client.py  types.py
src/slingshot/api/: projects.py
tests/: conftest.py  test_client.py  test_config.py  test_databricks.py  test_project.py  test_project_component.py  test_projects.py
tests/api/: test_workspace.py
tests/clients/: test_slingshot.py
tests/test_files/: aws_recommendation.json  azure_recommendation.json  databricks_job.json  project.json
tests/utils/: test_json.py
