[build-system]
# NOTE - versions of Hatchling more recent than 1.8.0 have a dependency on pathspec >= 0.10.1. However,
#  Databricks Runtime versions only have pathspec==0.9.0 installed, and so attempting to `pip install ...`
#  c1-slingshot-sdk-py will fail with an `AttributeError`. Pinning Hatching to this version, which is the most
#  recent version to only require pathspec >= 0.9.0, resolves that issue without asking the user to
#  install pathspec >= 0.10.1 on their Databricks clusters. We should only ever upgrade this version once
#  most/all Databricks Runtime LTS releases support pathspec >= 0.10.1, which may be a while...
# See here for DBR release notes - https://docs.databricks.com/release-notes/runtime/releases.html
build-backend = "hatchling.build"
requires = ["hatchling~=1.8.0"]

[project]
authors = [{ "name" = "Capital One Software" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
]
dependencies = [
    "httpx~=0.23",
    "platformdirs~=4.0",
    "pydantic-settings~=2.0",
    "pydantic~=2.0",
    "python-dateutil>=2.7,<3",
    "tenacity~=9.0",
]
version = "0.0.1"
description = "Slingshot SDK"
name = "c1s-slingshot-sdk-py"
readme = "README.md"
requires-python = ">=3.8,<3.13"

[tool.hatch.build.targets.wheel]
packages = ["c1s-slingshot-sdk-py"]

[tool.coverage.run]
omit = [
    "*/clients/*",
    "slingshot/awsdatabricks.py",
    "slingshot/azuredatabricks.py",
    "slingshot/config.py",
    "slingshot/models.py"
]

[project.urls]
Home = "https://github.com/capitalone/c1-slingshot-sdk-py"

[tool.pytest.ini_options]
env = [
    "AWS_DEFAULT_REGION=us-east-1",
    "SLINGSHOT_API_KEY_ID=fake",
    "SLINGSHOT_API_KEY_SECRET=fake",
]
filterwarnings = ["ignore::UserWarning"]
pythonpath = ["."]


[tool.ruff]
exclude = ["artifacts/*"]
line-length = 100
target-version = "py38"
[tool.ruff.lint]
ignore = ["B903", "E501"]
preview = true
select = ["ASYNC", "B", "C9", "E", "F", "I", "PLE", "RUF", "TID", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    # Whitelisted default arguments
    "Security",
    "Tracker",
    "app.api.deps.Tracker",
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Security",
]
[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "standard"
useLibraryCodeForTypes = false
